<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/HomeFragment"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home" />
    <item
        android:id="@+id/FeedFragment"
        android:icon="@drawable/ic_feed"
        android:enabled="true"
        android:title="@string/feed" />
    <item
        android:id="@+id/WriteFragment"
        android:enabled="true"
        android:title=""
        />
    <item
        android:id="@+id/NotificationFragment"
        android:icon="@drawable/ic_notification"
        android:enabled="true"
        android:title="@string/notification" />
    <item
        android:id="@+id/MyProfileFragment"
        android:icon="@drawable/ic_my_page"
        android:enabled="true"
        android:title="@string/my_page" />
</menu>