<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_report_post_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_report_post_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingStart="18dp"
            android:src="@drawable/ic_back_sign"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_report_post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_post_title"
            android:textColor="@color/gray_1_313131"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btn_report_post_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_report_post_back" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="17dp"
                android:textStyle="bold"
                android:text="@string/report_post_subtitle"
                android:textColor="@color/gray_1_313131"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:text="@string/report_post_description"
                android:textColor="@color/gray_1_313131"
                android:textSize="12dp" />

            <RadioGroup
                android:id="@+id/radiogroup_report_post_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radiobutton_report_post_reason_1"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="15dp"
                    android:button="@drawable/selector_radiobutton_report"
                    android:layoutDirection="rtl"
                    android:text="@string/report_post_reason_1"
                    android:textColor="@drawable/selector_radiobutton_report_text"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/radiobutton_report_post_reason_2"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="18dp"
                    android:button="@drawable/selector_radiobutton_report"
                    android:layoutDirection="rtl"
                    android:text="@string/report_post_reason_2"
                    android:textColor="@drawable/selector_radiobutton_report_text"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/radiobutton_report_post_reason_3"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="18dp"
                    android:button="@drawable/selector_radiobutton_report"
                    android:layoutDirection="rtl"
                    android:text="@string/report_post_reason_3"
                    android:textColor="@drawable/selector_radiobutton_report_text"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/radiobutton_report_post_reason_4"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="18dp"
                    android:button="@drawable/selector_radiobutton_report"
                    android:layoutDirection="rtl"
                    android:text="@string/report_post_reason_4"
                    android:textColor="@drawable/selector_radiobutton_report_text"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/radiobutton_report_post_reason_5"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="18dp"
                    android:button="@drawable/selector_radiobutton_report"
                    android:layoutDirection="rtl"
                    android:text="@string/report_post_reason_5"
                    android:textColor="@drawable/selector_radiobutton_report_text"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/radiobutton_report_post_reason_6"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="18dp"
                    android:button="@drawable/selector_radiobutton_report"
                    android:layoutDirection="rtl"
                    android:text="@string/report_post_reason_6"
                    android:textColor="@drawable/selector_radiobutton_report_text"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/radiobutton_report_post_reason_7"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="18dp"
                    android:button="@drawable/selector_radiobutton_report"
                    android:layoutDirection="rtl"
                    android:text="@string/report_post_reason_7"
                    android:textColor="@drawable/selector_radiobutton_report_text"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/radiobutton_report_post_reason_other"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="18dp"
                    android:button="@drawable/selector_radiobutton_report"
                    android:layoutDirection="rtl"
                    android:text="@string/report_post_reason_other"
                    android:textColor="@drawable/selector_radiobutton_report_text"
                    android:textSize="14dp" />
            </RadioGroup>

            <EditText
                android:id="@+id/et_report_post_reason_other"
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:layout_marginHorizontal="19dp"
                android:background="@drawable/selector_edittext_report"
                android:gravity="top"
                android:hint="@string/report_post_reason_other_hint"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:padding="11dp"
                android:textColorHint="@color/gray_4_D3D2D2"
                android:textSize="13dp"
                android:visibility="invisible"
                tools:visibility="visible" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_report_post"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="18dp"
        android:background="@drawable/selector_button_default_green"
        android:text="@string/report_post_button"
        android:textColor="@color/white_FFFFFF" />

</LinearLayout>