<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/white_FFFFFF" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_withdraw_action_bar"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:elevation="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageButton
                android:id="@+id/btn_withdraw_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back_sign"
                tools:ignore="ContentDescription"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="18dp"/>
            <TextView
                android:id="@+id/tv_withdraw_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdraw_title"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/gray_1_313131"
                app:layout_constraintTop_toTopOf="@id/btn_withdraw_back"
                app:layout_constraintBottom_toBottomOf="@id/btn_withdraw_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="17dp"
            android:text="@string/withdraw_subheading"
            android:textColor="@color/gray_1_313131"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/layout_withdraw_action_bar"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_subheading_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="54dp"
            android:text="@string/withdraw_subheading_explanation"
            android:textColor="@color/gray_2_5D5D5D"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subheading" />

        <RadioGroup
            android:id="@+id/radiogroup_withdraw_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:animateLayoutChanges="true"
            app:layout_constraintTop_toBottomOf="@id/tv_subheading_explanation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/radiobutton_withdraw_reason_1"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="18dp"
                android:text="@string/withdraw_reason_1"
                android:textSize="14dp"
                android:layoutDirection="rtl"
                android:button="@drawable/selector_radiobutton_withdraw"
                android:textColor="@drawable/selector_radiobutton_withdraw_text" />
            <RadioButton
                android:id="@+id/radiobutton_withdraw_reason_2"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="18dp"
                android:text="@string/withdraw_reason_2"
                android:textSize="14dp"
                android:layoutDirection="rtl"
                android:button="@drawable/selector_radiobutton_withdraw"
                android:textColor="@drawable/selector_radiobutton_withdraw_text" />
            <RadioButton
                android:id="@+id/radiobutton_withdraw_reason_3"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="18dp"
                android:text="@string/withdraw_reason_3"
                android:textSize="14dp"
                android:layoutDirection="rtl"
                android:button="@drawable/selector_radiobutton_withdraw"
                android:textColor="@drawable/selector_radiobutton_withdraw_text" />
            <RadioButton
                android:id="@+id/radiobutton_withdraw_reason_4"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="18dp"
                android:text="@string/withdraw_reason_4"
                android:textSize="14dp"
                android:layoutDirection="rtl"
                android:button="@drawable/selector_radiobutton_withdraw"
                android:textColor="@drawable/selector_radiobutton_withdraw_text" />
            <RadioButton
                android:id="@+id/radiobutton_withdraw_reason_5"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="18dp"
                android:text="@string/withdraw_reason_5"
                android:textSize="14dp"
                android:layoutDirection="rtl"
                android:button="@drawable/selector_radiobutton_withdraw"
                android:textColor="@drawable/selector_radiobutton_withdraw_text" />
            <RadioButton
                android:id="@+id/radiobutton_withdraw_reason_other"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="18dp"
                android:text="@string/withdraw_reason_other"
                android:textSize="14dp"
                android:layoutDirection="rtl"
                android:button="@drawable/selector_radiobutton_withdraw"
                android:textColor="@drawable/selector_radiobutton_withdraw_text" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_withdraw_reason_other"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_marginHorizontal="19dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/selector_edittext_withdraw"
            android:gravity="top"
            android:hint="@string/withdraw_reason_other_hint"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:padding="11dp"
            android:textColorHint="@color/gray_4_D3D2D2"
            android:textSize="13dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/radiogroup_withdraw_reason"
            tools:layout_editor_absoluteX="21dp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_withdraw_final_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_final_message"
            android:layout_marginTop="46dp"
            android:layout_marginHorizontal="43dp"
            android:bufferType="spannable"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/gray_1_313131"
            app:layout_constraintTop_toBottomOf="@id/et_withdraw_reason_other"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_withdraw"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_withdraw"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:stateListAnimator="@null"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="18dp"
            android:text="@string/withdraw_button"
            android:textColor="@color/white_FFFFFF"
            android:background="@drawable/selector_button_default_green"
            app:layout_constraintTop_toBottomOf="@id/tv_withdraw_final_message"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>