<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="feedCount"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragment.feed.FeedFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/layout_scroll_feed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{feedCount == 0 ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_feed_post"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="24dp"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/item_feed_post" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{feedCount == 0 ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_feed_empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/feed_empty_title"
                android:textColor="@color/gray_3_9C9C9C" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="13dp"
                android:gravity="center"
                android:text="@string/feed_empty_description"
                android:textColor="@color/gray_4_D3D2D2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_feed_empty"
                android:layout_width="149dp"
                android:layout_height="40dp"
                android:layout_marginTop="37dp"
                android:button="@android:color/transparent"
                android:textAlignment="center"
                android:textSize="14dp"
                android:text="@string/feed_empty_button"
                android:textColor="@drawable/selector_button_follow_text"
                android:background="@drawable/selector_button_follow" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>